# cbed-simulation

./: .gitignore  LICENSE  README.md  generate-dataset.ipynb  make_frame.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/cbed_simulation/: __init__.py  crystal_bloch.py  crystal_orientation.py  distortions.py  frame_builder.py  interactive_miller_plot.py  orientation_plan.py  strain_decomposition.py  symmetry_reduction.py  template_from_image.py  udf.py  utils.py
tests/: .gitignore  test_frames.py  test_gpu.py  test_orientation.py  test_py4dstem.py  test_ref.py  test_strain.py  test_udf.py
