[project]
name = "cbed-simulation"
description = "Generate CBED patterns from crystal definition and orientation"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Matthew Bryan", email = "matthew.bryan@cea.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-image",
    "scipy",
    "perlin-numpy",
    "orix",
    "abtem",
    "ase",
    "diffsims",
    "diffpy.structure",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "py4dstem"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cbed_simulation/__version__.py"
