[project]
name = "cbed-simulation"
description = "Generate CBED patterns from crystal definition and orientation"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Matthew Bryan", email = "matthew.bryan@cea.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>2",
    "scikit-image",
    "scipy",
    "orix",
    "diffsims",
    "diffpy.structure",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "py4dstem", "libertem", "pymatgen", "pandas<3", "abtem", "ase"]
udf = ["libertem"]
bloch = [
    "abtem",
    "pandas<3",  # for abtem compatibility
    "ase",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cbed_simulation/__version__.py"
